test_regress/t/t_force_rhs_ref_multiple_bad.out
%Error: t/t_force_rhs_ref_multiple_bad.v:24:  got='h0a exp='h00000009
%Error: t/t_force_rhs_ref_multiple_bad.v:27:  got='h0a exp='h00000009
%Error: t/t_force_rhs_ref_multiple_bad.v:29:  got='h0a exp='h00000007
%Error: t/t_force_rhs_ref_multiple_bad.v:32:  got='h0a exp='h00000007
%Error: t/t_force_rhs_ref_multiple_bad.v:34:  got='h0a exp='h00000004
%Error: t/t_force_rhs_ref_multiple_bad.v:37:  got='h0a exp='h00000004
%Error: t/t_force_rhs_ref_multiple_bad.v:39:  got='h0a exp='h00000000
%Error: t/t_force_rhs_ref_multiple_bad.v:43:  got='h0a exp='h00000000
